<resources>
    <string name="app_name">Appointment Scheduler</string>
    <string name="action_settings">Settings</string>
    <string name="nav_drawer_schedule_title">Schedule</string>
    <string name="nav_drawer_interview_list_title">Interview Lists</string>
    <string name="nav_drawer_member_list_title">Members</string>
    <string name="nav_drawer_notifications_title">Notifications</string>
    <string name="nav_drawer_settings_title">Settings</string>
    <string name="open_nav_drawer">Open Navigation Drawer</string>
    <string name="close_nav_drawer">Close Navigation Drawer</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_interview_list">InterviewListActivity</string>
    <string name="launcher_name">Interview Scheduler</string>
    <string name="title_activity_month_schedule">MonthScheduleActivity</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General toolbar_settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example toolbar_settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example toolbar_settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="action_share">Share Schedule</string>
    <string name="title_activity_member_list">MemberListActivity</string>

    <string name="action_member_list">Members</string>
    <string name="empty_member_list">No members in the list</string>
    <string name="empty_interview_list">No interview lists created</string>
    <string name="action_interview_list">Interview Lists</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="add_member">Add New Member</string>
    <string name="member_name">Member Name</string>
    <string name="member_is_interviewer">Interviewer</string>
    <string name="member_mobile">Member Mobile Number</string>
    <string name="member_email">Member Email Address</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="context_menu_delete_member">Delete</string>
    <string name="context_menu_email_member">Email</string>
    <string name="context_menu_text_member">Send text</string>
    <string name="context_menu_call_member">Call</string>
    <string name="edit_member">Edit Member</string>
    <string name="chooser_title">Do it with</string>
    <string name="current_interview_list_name">Current List</string>
    <string name="current_interview_list_date_range">Nov 1 2015 - Dec 31 2015</string>
    <string name="add_int_list">Add Interview List</string>
    <string name="int_list_name">Interview List Name</string>
    <string name="int_list_start_date">Start Date</string>
    <string name="int_list_end_date">End Date</string>
    <string name="int_list_is_current">Mark as Current List</string>
    <string name="edit_interview_list">Edit Interview List</string>
    <string name="context_menu_delete_int_list">Delete</string>
    <string name="context_menu_make_current_int_list">Make Current</string>
    <string name="add_appointment">Add New Appointment</string>
    <string name="member_meeting_with">is meeting with</string>
    <string name="appointment_member">Select member</string>
    <string name="appointment_interviewer">Select interviewer</string>
    <string name="member_meeting_on">on</string>
    <string name="member_meeting_at">at</string>
    <string name="appointment_notes">Notes</string>
    <string name="appointment_location">Location</string>
    <string name="appointment_time">Time</string>
    <string name="appointment_date">Date</string>
    <string name="title_activity_appointment">AppointmentActivity</string>
    <string name="action_appointment">Add New Appointment</string>
    <string name="member_meeting_at_symbol">\@</string>
    <string name="appointment_cancel">Cancel</string>
    <string name="appointment_save">Save</string>
    <string name="appointment_is_completed">Completed</string>
    <string name="title_activity_daily_schedule">DailyScheduleActivity</string>
    <string name="empty_daily_schedule">No Appointments Schedule for Today</string>
    <string name="context_menu_mark_complete">Toggle Completed Flag</string>
    <string name="next_appointment_header">Next Appointment</string>
    <string name="widget_header">Upcoming Appointments</string>
    <string name="widget_empty_view">No Appointments Set</string>
</resources>
