<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/member_dialog_header"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:gravity="center_horizontal|center_vertical"
        android:background="@color/colorPrimary"
        android:text="@string/add_member"
        android:textColor="@color/colorTextLight"
        android:textSize="24sp"/>
    <TextView
        android:id="@+id/member_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"/>
    <EditText
        android:id="@+id/member_name"
        android:inputType="textCapWords"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/member_name" />
    <EditText
        android:id="@+id/member_mobile"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/member_mobile" />
    <EditText
        android:id="@+id/member_email"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif"
        android:hint="@string/member_email"/>
    <CheckBox
        android:id="@+id/member_is_interviewer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checkMark="@null"
        android:text="@string/member_is_interviewer"/>
</LinearLayout>