<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/int_list_dialog_header"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:gravity="center_horizontal|center_vertical"
        android:background="@color/colorPrimary"
        android:text="@string/add_int_list"
        android:textColor="@color/colorTextLight"
        android:textSize="24sp"/>
    <TextView
        android:id="@+id/int_list_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"/>
    <EditText
        android:id="@+id/int_list_name"
        android:inputType="textCapWords"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/int_list_name" />
    <EditText
        android:id="@+id/int_list_start_date"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/int_list_start_date" />
    <EditText
        android:id="@+id/int_list_end_date"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif"
        android:hint="@string/int_list_end_date" />
    <CheckBox
        android:id="@+id/int_list_is_current"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checkMark="@null"
        android:text="@string/int_list_is_current"/>
</LinearLayout>