<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/appointment_dialog_header"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_horizontal|center_vertical"
        android:background="@color/colorPrimary"
        android:text="@string/add_appointment"
        android:textColor="@color/colorTextLight"
        android:textSize="24sp"/>
    <TextView
        android:id="@+id/appointment_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"/>
    <Spinner
        android:id="@+id/appointment_name_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:prompt="@string/appointment_member" />
    <TextView
        android:id="@+id/appointment_meeting_with"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/member_meeting_with"/>
    <Spinner
        android:id="@+id/appointment_interviewer_spinner"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/appointment_interviewer" />
    <TextView
        android:id="@+id/appointment_meeting_on"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/member_meeting_on"/>
    <!--<LinearLayout-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:orientation="horizontal">-->
        <!--<DatePicker-->
            <!--android:id="@+id/appointment_date"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginTop="4dp"-->
            <!--android:layout_marginLeft="4dp"-->
            <!--android:layout_marginRight="4dp"-->
            <!--android:layout_marginBottom="16dp"-->
            <!--android:datePickerMode="spinner"-->
            <!--android:hint="@string/appointment_date"/>-->
        <!--<TimePicker-->
            <!--android:id="@+id/appointment_time"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginTop="4dp"-->
            <!--android:layout_marginLeft="4dp"-->
            <!--android:layout_marginRight="4dp"-->
            <!--android:layout_marginBottom="16dp"-->
            <!--android:timePickerMode="spinner"-->
            <!--android:hint="@string/appointment_time"/>-->
    <!--</LinearLayout>-->
    <TextView
        android:id="@+id/appointment_meeting_at"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/member_meeting_at"/>
    <EditText
        android:id="@+id/appointment_location"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:fontFamily="sans-serif"
        android:hint="@string/appointment_location"/>
    <EditText
        android:id="@+id/appointment_notes"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans-serif"
        android:hint="@string/appointment_notes"/>
</LinearLayout>