<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/widget"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/widget_margin">

    <FrameLayout
        android:id="@+id/widget_header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/abc_action_bar_default_height_material"
        android:background="@color/colorPrimary">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/app_name"
            android:src="@drawable/app_icon" />
    </FrameLayout>

    <TextView
        android:id="@+id/widget_header_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:fontFamily="sans-serif-condensed"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorTextDark"
        android:text="@string/widget_header"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorWhite">

        <ListView
            android:id="@+id/widget_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@null"
            android:dividerHeight="0dp"
            tools:listitem="@layout/widget_detail_list_item"/>
        <TextView
            android:id="@+id/widget_empty"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:fontFamily="sans-serif-condensed"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@color/colorTextDark"
            android:text="@string/widget_empty_view"/>
    </FrameLayout>

</LinearLayout>